# skills-201

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.agents/skills/process-bw-images/: SKILL.md
.agents/skills/python-flat-cli-repo/: SKILL.md
.agents/skills/python-unittest-fixtures/: SKILL.md
.cursor/skills/colorize-images/: SKILL.md
.cursor/skills/cropping-images/: SKILL.md
.cursor/skills/process-bw-folder/: SKILL.md
.cursor/skills/python-secure-gemini-image-client/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: colorize_images.py  crop_images.py  process_bw_folder.py  process_bw_images.py
tests/: test_colorize_images.py  test_crop_images.py  test_process_bw_folder.py  test_process_bw_images.py
